--- a/Hope_server/.env.production
+++ b/Hope_server/.env.production
@@ -1,9 +1,9 @@
 # Production Database Configuration
-DATABASE_URL=postgresql://username:password@your-db-host:5432/hope_platform
+DATABASE_URL=postgresql://username:Yvette@123@your-db-host:5432/hope_platform
 DATABASE_HOST=your-db-host
 DATABASE_PORT=5432
 DATABASE_USERNAME=username
-DATABASE_PASSWORD=password
+DATABASE_PASSWORD=Yvette@123
 DATABASE_NAME=hope_platform
 
 # Production JWT Configuration
