--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,6 @@
 {
-  "buildCommand": "cd Hope_client && npm run build",
-  "installCommand": "cd Hope_client && npm install",
-  "outputDirectory": "Hope_client/.next",
-  "rewrites": [
-    {
-      "source": "/(.*)",
-      "destination": "/Hope_client/$1"
-    }
-  ]
+  "buildCommand": "npm run build",
+  "outputDirectory": ".next",
+  "installCommand": "npm install",
+  "rootDirectory": "Hope_client"
 }
