--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,4 @@
 {
   "buildCommand": "npm run build",
-  "outputDirectory": ".next",
-  "installCommand": "npm install",
-  "rootDirectory": "Hope_client"
+  "outputDirectory": ".next"
 }
